Fix overflow

--- a/src/sass/_basics.scss
+++ b/src/sass/_basics.scss
@@ -15,6 +15,7 @@ body {
     font-size: 1rem;
     font-weight: 300;
     color: $text-color;
+    overflow-x: hidden;
 }
 
 a {
